# get-nft-data

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  common.py  dedup.py  dedup_analysis.sql  dedup_stats.py  fix_pg_name_spaces.py  fix_pg_none_names.py  fix_pg_trailing_name_spaces.py  log_scanner.py  nft_assets_ethereum.sql  nft_collector.py  requirements.txt  retry.py  schema.sql  top_contract_analysis.json  top_contract_analysis.md  top_contract_analysis_1.json  top_contract_analysis_1.md  trend_stats.py
analysis/: Cargo.toml  README.md
analysis/config/: default.toml
analysis/src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  platform.rs  progress.rs
analysis/src/analysis/: attribution.rs  behavior.rs  economics.rs  legit_duplicate.rs  lifecycle.rs  mod.rs  propagation.rs  quality.rs  relation_projector.rs
analysis/src/api/: evm.rs  http.rs  mod.rs  price.rs  solana.rs
analysis/src/dedup/: metadata.rs  mod.rs  name.rs  reducer.rs  scratch.rs  uri.rs
analysis/src/enrich/: fetch.rs
analysis/src/input/: mod.rs  parquet.rs  validate.rs
analysis/src/model/: evidence.rs  identity.rs  matching.rs  mod.rs  report.rs  snapshot.rs
analysis/src/pipeline/: candidate_registry.rs  coordinator.rs  cpu_executor.rs  messages.rs  mod.rs  orchestrator.rs  scheduler.rs  shard_seal.rs
analysis/src/reporting/: aggregate.rs  artifact_index.rs  contract_writer.rs  csv.rs  json.rs  markdown.rs  mod.rs  scope.rs
analysis/src/resident/: analysis_identity.rs  builder.rs  candidate_bounds.rs  metadata_index.rs  mod.rs  name_index.rs  query_plan.rs  store.rs  uri_index.rs  value_pools.rs
analysis/src/seed/: manifest.rs  mod.rs  selector.rs
analysis/tests/: four_chain_oracle.rs  parquet_two_pass.rs  pipeline_overlap.rs  report_golden.rs
analysis2/: Cargo.toml  README.md
analysis2/crates/cli/: Cargo.toml
analysis2/crates/cli/src/: lib.rs  (+3 more)
analysis2/crates/core/: Cargo.toml
dedup/: Cargo.toml  README.md  config.toml
dedup/crates/cli/: Cargo.toml
dedup/crates/dedup-cli/: Cargo.toml
dedup/crates/dedup-engine/: Cargo.toml
dedup/crates/dedup-index/: Cargo.toml
dedup/crates/dedup-linux/: Cargo.toml
dedup/crates/dedup-model/: Cargo.toml
dedup/crates/dedup-report/: Cargo.toml
dedup/crates/dedup-storage/: Cargo.toml
dedup2/: Cargo.toml  README.md
dedup2/crates/cli/: Cargo.toml
dedup2/crates/core/: Cargo.toml
dedup_bench_rs/: Cargo.toml  README.md
dedup_bench_rs/.cargo/: config.toml
dedup_bench_rs/py_report/: requirements.txt
dedup_bench_rs/py_report/dedup_bench_report/: analyzer.py  cli.py  models.py  render_html.py
dedup_bench_rs/src/: algorithms.rs  benchmark.rs  decision_rules.rs  error.rs  lib.rs  main.rs  report.rs  sample.rs  store.rs
dedup_bench_rs/tests/: cli.rs
name_metadata_change_samples/: Cargo.toml  README.md
name_metadata_change_samples/scripts/: fetch_opensea_top_seeds.py
name_metadata_change_samples/src/: lib.rs  main.rs
name_metadata_change_samples/tests/: sample_collection.rs  test_fetch_opensea_global_top.py  test_fetch_opensea_top_seeds.py
name_symbol_stats/cpp/: CMakeLists.txt
name_symbol_stats/cpp/src/: main.cpp  worker_core.cpp  worker_core.hpp
name_uri_analysis_rs/: .gitignore  Cargo.toml  README.md  build.rs
name_uri_analysis_rs/metadata_engine/: Cargo.toml
name_uri_analysis_rs/metadata_engine/src/: artifacts.rs  cascade.rs  evidence.rs  exact_islands.rs  identity.rs  index.rs  lib.rs  pipeline.rs  progress.rs  reduce.rs  resource.rs  scheduler.rs  scoring.rs  snapshot.rs
name_uri_analysis_rs/metadata_engine/tests/: blocking_base_equivalent.rs  csr_streaming.rs  encode_artifacts.rs  format_roundtrip.rs  format_streaming.rs  parser_differential.rs  payload_cas_streaming.rs  pipeline_architecture.rs  scoring_differential.rs  snapshot_open.rs  storage_broker.rs
name_uri_analysis_rs/src/: analysis.rs  atomic_file.rs  controller_child.rs  controller_constants.rs  controller_fingerprint.rs  controller_layout.rs  controller_locks.rs  controller_manifest.rs  hash_util.rs  lib.rs  main.rs
name_uri_analysis_rs/src/analysis/: chain_matrix.rs  components.rs  duckdb_prep.rs  memory.rs  metadata.rs  name.rs  name_scoring.rs  output.rs  production.rs  progress.rs  semantic_oracle.rs  tests.rs  types.rs  uri.rs
name_uri_analysis_rs/src/main_tests/: cli_parsing.rs  fingerprints.rs  mod.rs  resume_locks.rs  structure_pins.rs
name_uri_analysis_rs/tests/: README.md  analysis.rs  cli_pipeline.rs
name_uri_analysis_rs/tests/analysis_cases/: mod.rs
rust_ext/top_contract_analysis_rust/: Cargo.toml
rust_ext/top_contract_analysis_rust/src/: address_analysis.rs  common.rs  duplicate.rs  lib.rs  scoring.rs  signals.rs  snapshot_build.rs
top_contract_analysis_rs/: .env.example  Cargo.toml  README.md  build.rs  some.db.wal
top_contract_analysis_rs/scripts/: fetch_opensea_top_seeds.py
top_contract_analysis_rs/scripts/tests/: test_fetch_opensea_top_seeds.py
top_contract_analysis_rs/src/: config.rs  constants.rs  currency.rs  error.rs  lib.rs  main.rs  platform_infrastructure.rs
top_contract_analysis_rs/src/analysis/: address_records.rs  api.rs  batch.rs  candidate_filter.rs  contract_analysis.rs  duplicate.rs  lifecycle.rs  mod.rs  multichain.rs  paper_stats.rs  propagation.rs  sale_metrics.rs  scoring.rs  signals.rs  summary.rs  tests.rs  timing.rs  value_flow.rs
top_contract_analysis_rs/src/api/: alchemy.rs  etherscan.rs  helius.rs  mod.rs  opensea.rs
top_contract_analysis_rs/src/cli/: mod.rs
top_contract_analysis_rs/src/models/: mod.rs
top_contract_analysis_rs/src/normalize/: mod.rs
top_contract_analysis_rs/src/progress/: mod.rs
top_contract_analysis_rs/src/reporting/: mod.rs
top_contract_analysis_rs/src/store/: duckdb_store.rs  mod.rs  postgres_export.rs  signal_cache.rs
top_contract_analysis_rs/tests/: README.md  algorithms.rs  analyze.rs  api.rs  batch.rs  cli_smoke.rs  config.rs  helius.rs  multichain.rs  multichain_batch.rs  paper_stats.rs  store.rs
top_contract_analysis_rs/tests/algorithms_cases/: mod.rs
top_contract_analysis_rs/visualization/: README.md  propagation_viewer.html
(+468 files in other folders)
