[package]
name = "analysis"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[lib]
name = "analysis"
path = "src/lib.rs"

[[bin]]
name = "analysis"
path = "src/main.rs"

[dependencies]
ahash = "0.8"
arrow-array = "58.3"
arrow-schema = "58.3"
async-trait = "0.1"
bytes = "1.11"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.6", features = ["derive"] }
csv = "1.4"
futures-util = "0.3"
libc = "0.2"
parquet = { version = "58.3", features = ["arrow"] }
parking_lot = "0.12"
rapidfuzz = "0.5"
rayon = "1.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.52", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.9"
unicode-normalization = "0.1"
zstd = "0.13"

[dev-dependencies]
tempfile = "3.27"
