[workspace]
resolver = "2"
members = [
    "crates/dedup-model",
    "crates/dedup-linux",
    "crates/dedup-storage",
    "crates/dedup-index",
    "crates/dedup-engine",
    "crates/dedup-report",
    "crates/dedup-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[workspace.dependencies]
ahash = "0.8"
arrow-array = "57"
arrow-schema = "57"
clap = { version = "4.6", features = ["derive"] }
csv = "1.3"
fs2 = "0.4"
libc = "0.2"
memmap2 = "0.9"
num-bigint = "0.4"
parquet = { version = "=57.3.1", features = ["arrow"] }
rapidfuzz = "=0.5.0"
rayon = "1.11"
roaring = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
signal-hook = "0.3"
tempfile = "3.27"
thiserror = "2.0"
toml = "0.9"
unicode-normalization = "0.1"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.test]
debug = 0

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = "deny"
