[workspace]
resolver = "2"
members = ["crates/core", "crates/cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[workspace.dependencies]
ahash = "0.8"
arrow-array = "57"
arrow-schema = "57"
clap = { version = "4.6", features = ["derive"] }
ctrlc = "3.4"
csv = "1.3"
num-bigint = "0.4"
parquet = { version = "=57.3.1", features = ["arrow"] }
rapidfuzz = "=0.5.0"
rayon = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
tempfile = "3.27"
thiserror = "2.0"
unicode-normalization = "0.1"

dedup_core = { path = "crates/core" }

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
