[package]
name = "dedup_bench_rs"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
duckdb = { version = "1.1.1", features = ["bundled"] }
once_cell = "1.21"
rayon = "1.10"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strsim = "0.11"
sysinfo = "0.33"
thiserror = "2.0"
top_contract_analysis_rs = { path = "../top_contract_analysis_rs" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.17"
