[package]
name = "name_metadata_change_samples"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
duckdb = { version = "1.1.1", features = ["bundled"] }
indicatif = "0.17"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
top_contract_analysis_rs = { path = "../top_contract_analysis_rs" }

[dev-dependencies]
tempfile = "3.17"
