[package]
name = "name_metadata_change_samples"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
duckdb = { version = "1.1.1", features = ["bundled"] }
indicatif = "0.17"
once_cell = "1.20"
rayon = "1.10"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strsim = "0.11"
thiserror = "2.0"
unicode-normalization = "0.1"

[dev-dependencies]
tempfile = "3.17"
