[package]
name = "name_metadata_change_samples"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
duckdb = { version = "1.10504.0", features = ["bundled"] }
indicatif = "0.17"
once_cell = "1.21"
rayon = "1.12"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strsim = "0.11"
thiserror = "2.0"
unicode-normalization = "0.1"

[dev-dependencies]
tempfile = "3.27"
