[package]
name = "name_uri_analysis_rs"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
default = []
db-tests = []
expensive-tests = ["db-tests"]

[dependencies]
clap = { version = "4.6", features = ["derive"] }
duckdb = { version = "1.10504.0", features = ["bundled"] }
indicatif = "0.17"
once_cell = "1"
rapidfuzz = "0.5"
rayon = "1.12"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.33"
thiserror = "2.0"
unicode-normalization = "0.1"

[dev-dependencies]
tempfile = "3.27"

[[test]]
name = "analysis"
required-features = ["db-tests"]
