[package]
name = "name_uri_analysis_rs"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
default = []
db-tests = []
expensive-tests = ["db-tests"]

[dependencies]
metadata_engine = { path = "./metadata_engine" }
clap = { version = "4.6", features = ["derive"] }
duckdb = { version = "1.10504.0", features = ["bundled"] }
indicatif = "0.17"
rapidfuzz = "0.5"
rayon = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
sysinfo = "0.33"
thiserror = "2.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.27"

[[test]]
name = "analysis"
required-features = ["db-tests"]
