[package]
name = "top_contract_analysis_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
arrow-array = "58.1"
arrow-schema = "58.1"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
duckdb = { version = "1.1.1", features = ["bundled"] }
futures = "0.3"
once_cell = "1.21"
parquet = "58.1"
postgres = "0.19"
regex = "1.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strsim = "0.11"
thiserror = "2.0"
tokio = { version = "1.45", features = ["macros", "rt-multi-thread", "time"] }
unicode-normalization = "0.1"

[dev-dependencies]
assert_cmd = "2.0"
httpmock = "0.7"
predicates = "3.1"
tempfile = "3.17"
