[package]
name = "top_contract_analysis_rs"
version = "0.1.0"
edition = "2021"

[features]
default = []
api-tests = []
cli-tests = []
db-tests = []
expensive-tests = ["api-tests", "cli-tests", "db-tests"]
export-snapshot = ["dep:arrow-array", "dep:arrow-schema", "dep:parquet", "dep:postgres"]

[dependencies]
async-trait = "0.1"
arrow-array = { version = "58.3", optional = true }
arrow-schema = { version = "58.3", optional = true }
chrono = "0.4"
clap = { version = "4.6", features = ["derive"] }
duckdb = { version = "1.10504.0", features = ["bundled"] }
futures = "0.3"
fs2 = "0.4"
once_cell = "1.21"
parquet = { version = "58.3", optional = true }
postgres = { version = "0.19", optional = true }
rapidfuzz = "0.5"
rayon = "1.12"
regex = "1.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
thiserror = "2.0"
tokio = { version = "1.52", features = ["macros", "rt-multi-thread", "time"] }
unicode-normalization = "0.1"

[dev-dependencies]
assert_cmd = "2.2"
httpmock = "0.7"
predicates = "3.1"
strsim = "0.11"
tempfile = "3.27"

[[test]]
name = "analyze"
required-features = ["api-tests"]

[[test]]
name = "api"
required-features = ["api-tests"]

[[test]]
name = "cli_smoke"
required-features = ["cli-tests"]

[[test]]
name = "helius"
required-features = ["api-tests"]

[[test]]
name = "multichain"
required-features = ["api-tests"]

[[test]]
name = "multichain_batch"
required-features = ["api-tests"]

[[test]]
name = "paper_stats"
required-features = ["db-tests"]

[[test]]
name = "store"
required-features = ["db-tests"]
