[package]
name = "metadata_engine"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
memmap2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
thiserror = "2.0"
unicode-normalization = "0.1"
regex = "1"
once_cell = "1"
rayon = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem"] }

[dev-dependencies]
tempfile = "3.27"
