[package]
name = "top_contract_analysis_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "top_contract_analysis_rust"
crate-type = ["cdylib"]

[dependencies]
once_cell = "1.21"
pyo3 = { version = "0.22", features = ["extension-module"] }
rayon = "1.10"
regex = "1.12"
serde_json = "1.0"
strsim = "0.11"
unicode-normalization = "0.1"
