[package]
name = "analysis2_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "analysis2_cli"
path = "src/lib.rs"

[[bin]]
name = "analysis2"
path = "src/main.rs"

[dependencies]
analysis2_core.workspace = true
clap.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
ahash.workspace = true
