[package]
name = "analysis2_core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
ahash.workspace = true
arrow-array.workspace = true
arrow-cast.workspace = true
arrow-schema.workspace = true
chrono.workspace = true
num-bigint.workspace = true
parquet.workspace = true
rapidfuzz.workspace = true
rayon.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
httpmock.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
