[package]
name = "dedup-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = []
wide_ids = [
    "dedup-engine/wide_ids",
    "dedup-index/wide_ids",
    "dedup-model/wide_ids",
    "dedup-report/wide_ids",
    "dedup-storage/wide_ids",
]

[[bin]]
name = "dedup"
path = "src/main.rs"

[dependencies]
clap.workspace = true
csv.workspace = true
dedup-engine = { path = "../dedup-engine" }
dedup-index = { path = "../dedup-index" }
dedup-linux = { path = "../dedup-linux" }
dedup-model = { path = "../dedup-model" }
dedup-report = { path = "../dedup-report" }
dedup-storage = { path = "../dedup-storage" }
fs2.workspace = true
roaring.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
toml.workspace = true

[dev-dependencies]
arrow-array.workspace = true
arrow-schema.workspace = true
parquet.workspace = true
tempfile.workspace = true

[lints]
workspace = true
