[package]
name = "dedup-index"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = []
wide_ids = ["dedup-model/wide_ids"]

[dependencies]
ahash.workspace = true
dedup-model = { path = "../dedup-model" }
dedup-storage = { path = "../dedup-storage" }
tempfile.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
