[package]
name = "dedup-model"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = []
wide_ids = []

[dependencies]
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
