[package]
name = "dedup-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = []
wide_ids = ["dedup-model/wide_ids"]

[dependencies]
ahash.workspace = true
arrow-array.workspace = true
arrow-schema.workspace = true
dedup-model = { path = "../dedup-model" }
memmap2.workspace = true
parquet.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true

[lints]
workspace = true
