[package]
name = "dedup_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "dedup2"
path = "src/main.rs"

[dependencies]
clap.workspace = true
dedup_core.workspace = true
csv.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
arrow-array.workspace = true
arrow-schema.workspace = true
parquet.workspace = true
tempfile.workspace = true
