[package]
name = "dedup_core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
ahash.workspace = true
arrow-array.workspace = true
arrow-cast.workspace = true
arrow-schema.workspace = true
num-bigint.workspace = true
parquet.workspace = true
rapidfuzz.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
unicode-normalization.workspace = true

[dev-dependencies]
tempfile.workspace = true
